src/assets/style/workspace/workspace-remotecard.scss
@import "~assets/style/vars";
@import "~assets/style/mixin";

.card.groupcard {
  // max-width: 25rem;
  height: 35rem;
  background-color: $color_darkgray_600;
  &:hover {
    background-color: $color_darkgray_500;
  }
  &.open {
    background-color: #203531;
    border-color: #0a4338;
    &:hover {
      background-color: #1d4e44;
    }
  }
}
.groupcard-body {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.groupcard__leader {
  position: absolute;
  top: -0.714rem;
  left: -0.714rem;
  height: 1.43rem;
  padding: 0.286rem 0.857rem;
  font-weight: 500;
  font-size: 0.857rem;
  font-family: roboto;
  line-height: 0.857rem;
  background-color: #18497c;
  border: solid 1px #0261c6;
  border-radius: 0.857rem;
}
.groupcard-profile {
  flex: 1;
  padding-top: 1.429rem;
  text-align: center;
}
.profile__image {
  width: 5.143rem;
  height: 5.143rem;
  margin: 0 auto 0.357em;
  border-radius: 50%;
}
.profile__name {
  font-weight: 500;
  font-size: 1.286rem;
  word-break: break-all;
}
.profile__description {
  display: -webkit-box;
  min-height: 1.5rem;
  max-height: 3rem;
  margin-bottom: 0.357em;
  overflow: hidden;
  color: rgba($color_text_main, 0.76);
  font-size: 1.071rem;
  line-height: 1.5;
  white-space: normal;
  text-overflow: ellipsis;
  word-wrap: break-word;
  word-break: break-all;
  -webkit-line-clamp: 2;
  /* autoprefixer: off */
  -webkit-box-orient: vertical;
}
.profile__leader {
  position: relative;
  display: inline-block;
  width: fit-content;
  max-width: 100%;
  margin: 0.357rem auto 1rem;
  margin-bottom: 0.643rem;
  color: $color_text_sub;
  @include ellipsis();
  &:before {
    right: -0.5rem;
    display: inline-block;
    width: 1.429rem;
    height: 1.429rem;
    background: url(~assets/image/ic_leader.svg) 50%/1.429rem no-repeat;
    transform: translateY(0.357rem);
    content: "";
  }
}
.groupcard-info {
  display: inline-block;
  flex: 0;
}
.groupcard-info-mobile {
  display: none;
}
.info__section {
  margin-bottom: 1.429rem;
}
.info__title {
  margin-bottom: 0.714rem;
  color: $color_text_main;
  font-weight: 500;
}
.info__description {
  // font-weight: 500;
  color: $color_text_main;
  > b {
    color: $color_text;
    font-weight: 500;
  }
}
.btn.small.groupcard-button {
  bottom: 0;
  left: 0;
  flex: 0;
  width: 100%;
  min-height: 3rem;
  // margin-top: 1.429rem;
  padding: 0.714rem 2.857rem;
  font-weight: normal;
}
.groupcard.profilelist {
  > .profilelist-user {
    width: 2rem;
    height: 2rem;
    margin-left: 0.857rem;
    > .profile {
      width: auto;
    }
  }
  > .profilelist-user__expend {
    width: 2rem;
    height: 2rem;
    margin-left: 0.857rem;
  }
}

@include responsive-mobile {
  .card.groupcard {
    display: flex;
    align-items: center;
    padding: 0;
    background-color: $new_color_bg;
    border: 0.15rem solid $new_color_line_border;
    border-radius: 0.6rem;
    cursor: pointer;

    &.open {
      background-color: #283434; //@추가 color
      border-color: #2b6258; //@추가 color
      &:hover {
        background-color: #283434; //@추가 color
      }

      .groupcard-info-mobile .room-member {
        color: #28bf8e; //@추가 color
      }
    }

    &:hover {
      background-color: $new_color_bg; //@color 미정
    }
  }

  .groupcard-body {
    flex-direction: row;
    align-items: center;
  }

  .groupcard__leader {
    display: none;
  }

  .groupcard-profile {
    flex: 0;
    width: 4.2rem;
    height: 4.2rem;
    margin-right: 1.2rem;
    margin-left: 1.6rem;
    padding-top: 0;
    > p {
      display: none;
    }
  }

  .groupcard-info {
    display: none;
  }

  .groupcard-info-mobile {
    display: block;
    .title-container {
      display: flex;
      align-items: center;
      margin-bottom: 0.2rem;
      .groupcard__leader-mobile {
        margin: 0 0.2rem 0.1rem -0.5rem;
        padding: 0.1rem 1.1rem 0.1rem 1.2rem;
        font-size: 1rem;
        text-align: center;
        border: 0.1rem solid white;
        border-radius: 1.2rem;
        transform: scale(0.8);
      }
      .room-title {
        @include fontLevel(200);
        color: $new_color_text_main;
      }
    }

    .room-leader {
      @include fontLevel(75);
      margin-right: 0.8rem;
      color: $new_color_text_sub;
    }
    .room-member {
      @include fontLevel(75);
      color: $new_color_text_blue; //@추가 color
    }
  }

  .btn.small.groupcard-button {
    display: none;
  }
}

